# TrueMotionFidelityEngine

./: CMakeLists.txt  NOTICE  README.md  capture_log.txt  import_log.txt  init_log.txt  patch.py  temp_backup.cpp  test_app.cpp  update_tm.py  vulkan_test.txt  weights_trained.json  wgc_error.txt
build_fresh/: ALL_BUILD.vcxproj  CMakeCache.txt  TrueMotionFidelityEngine.sln  TrueMotionFidelityEngine.vcxproj  TrueMotionFidelityEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  graphics_hook.vcxproj  graphics_hook.vcxproj.filters
build_fresh/Release/: graphics_hook64_v2.exp
build_fresh/TrueMotionFidelityEngine.dir/Release/: True Motion Fidelity Engine.exe.recipe
build_fresh/TrueMotionFidelityEngine.dir/Release/TrueMoti.F7A4B66F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
build_fresh/graphics_hook.dir/Release/: graphics_hook64_v2.dll.recipe
build_fresh/graphics_hook.dir/Release/graphics_hook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_fresh/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_fresh/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build_fresh/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_fresh/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/: app.cpp  app.h  capture_frame.h  d3d11_device.cpp  d3d11_device.h  dll_injector.cpp  dll_injector.h  dup_capture.cpp  dup_capture.h  game_capture.cpp  game_capture.h  graphics_hook_info.h  interpolator.cpp  interpolator.h  interpolator_v3.cpp  interpolator_v3.h  main.cpp  render_device.cpp  render_device.h  resources.rc  shader_utils.cpp  shader_utils.h  ui.cpp  ui.h  vulkan_device.cpp  vulkan_device.h  vulkan_simple.h  vulkan_types.h  wgc_capture.cpp  wgc_capture.h  window_list.cpp  window_list.h
src/graphics_hook/: graphics_hook.cpp
src/shaders/: CopyScale.hlsl  DebugView.hlsl  DownsampleLuma.hlsl  DownsampleLumaR.hlsl  Interpolate.hlsl  MotionEst.hlsl  MotionRefine.hlsl  MotionSmooth.hlsl  MotionTemporal.hlsl  frame_gen.hlsl
src/shaders/vulkan/: cost_volume.comp  cost_volume.spv  downsample.comp  feature_pyramid.spv  flow_decoder.comp  flow_decoder.spv  interpolate.comp  interpolate.spv
tools/: CMakeLists.txt  training_suite.cpp  training_suite_gui.cpp  training_suite_gui.rc  weight_trainer.cpp
